--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
 * {
   margin: 0;
@@ -12,10 +12,10 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: hsl(233,47%,7%);
+  background: hsl(233, 47%, 7%);
   color: white;
 }
 
@@ -25,10 +25,75 @@ body {
   align-items: center;
   height: 100vh;
   width: auto;
-  
-} 
+}
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  background: hsl(244, 38%, 16%);
+  border-radius: 10px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .container{
+    margin: 2rem;
+  }
+}
 
 .row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+@media (min-width: 768px) {
+  .col-md-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+.col-md-6 {
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+@media (min-width: 768px) {
+  .col-md-4 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+}
+
+.col-md-4 {
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+ @media (min-width: 576px) {
+  .order-sm-1 {
+    order: 1;
+  }
+
+  .order-sm-12 {
+    order: 12;
+  }
+} 
+/* .row {
   display: flex;
   
   justify-content: space-between;
@@ -71,4 +136,4 @@ body {
 
 .col-4 {
   flex: 4 1 100rem;
-}
+} */
