--- a/src/index.css
+++ b/src/index.css
@@ -13,40 +13,59 @@ html {
 body {
   margin: 0;
   font-family: "Inter", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   background: hsl(233, 47%, 7%);
   color: white;
-}
-
-.app {
   display: flex;
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: auto;
 }
 
 .container {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  background: hsl(244, 38%, 16%);
-  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
 }
 
-@media only screen and (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
+.left{
+  flex: 50%;
+  padding: 50px;
+  background-color:#1C1938;
+  border-top-left-radius:10px;
+  border-bottom-left-radius: 10px;
+  color:white;
 }
 
-@media only screen and (max-width: 576px) {
-  .container{
-    margin: 2rem;
-  }
+.right{
+  flex: 50%;
+  background: url("./assets/image-header-desktop.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+@media(max-width:1080px)
+{
+    .container{
+        flex-direction: column-reverse;
+        margin:40px 20px;
+        align-self: stretch;
+    }
+    
+    .left{
+      text-align: center;
+      padding: 30px !important;
+      border-bottom-left-radius: 10px !important;
+      border-bottom-right-radius: 10px !important;
+    }
+
+    .right{
+      flex: 100%;
+      min-height: 350px;
+      border-top-right-radius: 10px !important;
+      border-top-left-radius: 10px !important;
+    }
 }
 
 .row {
@@ -70,13 +89,6 @@ body {
   padding-left: 15px;
 }
 
-@media (min-width: 768px) {
-  .col-md-4 {
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
-  }
-}
-
 .col-md-4 {
   position: relative;
   width: 100%;
@@ -84,56 +96,16 @@ body {
   padding-left: 15px;
 }
 
- @media (min-width: 576px) {
-  .order-sm-1 {
-    order: 1;
-  }
-
-  .order-sm-12 {
-    order: 12;
-  }
-} 
-/* .row {
-  display: flex;
-  
-  justify-content: space-between;
-  align-items: center;
-}
-
-.direction{
-  flex-direction: row;
-}
-
-@media only screen and (max-width: 600px){
-  .direction{
-    flex-direction: column;
+@media (min-width: 768px) {
+  .col-md-4 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333% !important;
   }
 }
 
-.row.center {
-  justify-content: center;
-}
 
-.row.top {
-  align-items: flex-start;
+ @media (max-width: 576px) {
+   .col-sm-12{
+     width: 100%;
+   }
 }
-
-.row.end {
-  justify-content: flex-end;
-}
-
-.col-1 {
-  flex: 1 1 25rem;
-}
-
-.col-2 {
-  flex: 2 1 50rem;
-}
-
-.col-3 {
-  flex: 3 1 75rem;
-}
-
-.col-4 {
-  flex: 4 1 100rem;
-} */
